<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#888"/>

    <com.lzy.widget.AlphaIndicator
        android:id="@+id/alphaIndicator"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <com.lzy.widget.AlphaView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:av_tabIconNormal="@drawable/home_normal"
            app:av_tabIconSelected="@drawable/home_selected"
            app:av_tabText="@string/main_01"
            app:av_tabTextSize="14sp"
            app:av_textColorNormal="@color/gray_0"
            app:av_textColorSelected="@color/blue_11"/>
        <com.lzy.widget.AlphaView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:av_tabIconNormal="@drawable/service_normal"
            app:av_tabIconSelected="@drawable/service_selected"
            app:av_tabText="@string/main_03"
            app:av_tabTextSize="14sp"
            app:av_textColorNormal="@color/gray_0"
            app:av_textColorSelected="@color/blue_11"/>

        <com.lzy.widget.AlphaView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:av_tabIconNormal="@drawable/category_normal"
            app:av_tabIconSelected="@drawable/category_selected"
            app:av_tabText="@string/main_02"
            app:av_tabTextSize="14sp"
            app:av_textColorNormal="@color/gray_0"
            app:av_textColorSelected="@color/blue_11"/>


        <com.lzy.widget.AlphaView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:av_tabIconNormal="@drawable/mine_normal"
            app:av_tabIconSelected="@drawable/mine_selected"
            app:av_tabText="@string/main_04"
            app:av_tabTextSize="14sp"
            app:av_textColorNormal="@color/gray_0"
            app:av_textColorSelected="@color/blue_11"/>
    </com.lzy.widget.AlphaIndicator>
</LinearLayout>